--- a/css/style.css
+++ b/css/style.css
@@ -49,10 +49,10 @@ table {
   font-family: "Attack Type";
   src:
     local("AttackType"),
-    url("AttackType-Bold.ttf") format("truetype"),
-    url("AttackType-Heavy.ttf") format("truetype"),
-    url("AttackType-Medium.ttf") format("truetype"),
-    url("AttackType-Regular.ttf") format("truetype");
+    url("/fonts/AttackType/AttackType-Bold.ttf") format("truetype"),
+    url("/fonts/AttackType/AttackType-Heavy.ttf") format("truetype"),
+    url("/fonts/AttackType/AttackType-Medium.ttf") format("truetype"),
+    url("/fonts/AttackType/AttackType-Regular.ttf") format("truetype");
 }
 
 
