--- a/css/style.css
+++ b/css/style.css
@@ -47,11 +47,7 @@ table {
 
 @font-face {
   font-family: "Attack Type";
-  src:
-    url("../fonts/AttackType/AttackType-Bold.ttf") format("truetype"),
-    url("../fonts/AttackType/AttackType-Heavy.ttf") format("truetype"),
-    url("../fonts/AttackType/AttackType-Medium.ttf") format("truetype"),
-    url("../fonts/AttackType/AttackType-Regular.ttf") format("truetype");
+  src: url("../fonts/AttackType/AttackType-Regular.ttf") format("truetype");
 }
 
 
