--- a/css/style.css
+++ b/css/style.css
@@ -48,8 +48,25 @@ table {
 @font-face {
   font-family: "Attack Type";
   src: url("../fonts/AttackType/AttackType-Regular.ttf") format("truetype");
-  font-weight: normal;
+  font-weight: 500;
 }
+@font-face {
+  font-family: "Attack Type";
+  src: url("../fonts/AttackType/AttackType-Medium.ttf") format("truetype");
+  font-weight: 600;
+}
+@font-face {
+  font-family: "Attack Type";
+  src: url("../fonts/AttackType/AttackType-Bold.ttf") format("truetype");
+  font-weight: 700;
+}
+@font-face {
+  font-family: "Attack Type";
+  src: url("../fonts/AttackType/AttackType-Heavy.ttf") format("truetype");
+  font-weight: 800;
+}
+
+
 
 
 
