--- a/css/style.css
+++ b/css/style.css
@@ -1509,7 +1509,7 @@ header{
     padding-bottom: 20px;
     padding-left: 20px;
     color: #ffffff;
-    font-family: 'Neue Montreal';
+    font-family: 'Roboto';
     font-weight: 500;
     text-transform: uppercase;
 }
@@ -1578,7 +1578,7 @@ header{
 }
 .home-img-block>h3>p:last-child{
     position: absolute;
-    font-family: 'Neue Montreal';
+    font-family: Roboto';
     width: 250px;
     font-size: 28px;
     text-transform: uppercase;
