--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,14 @@ table {
 }
 
 
+.roboto-<uniquifier> {
+  font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
 @font-face {
   font-family: "Attack Type";
   src: url("../fonts/AttackType/AttackType-Regular.ttf") format("truetype");
